# llvm-project

clang/lib/Basic/: Targets.cpp
clang/lib/Basic/Targets/: OSTargets.h
clang/lib/Driver/: CMakeLists.txt  Driver.cpp
clang/lib/Driver/ToolChains/: RISCovite.cpp  RISCovite.h
clang/test/Driver/: riscovite.c  riscovite.cpp
compiler-rt/cmake/Modules/: CompilerRTUtils.cmake
compiler-rt/lib/builtins/: CMakeLists.txt
libc/cmake/modules/: LLVMLibCArchitectures.cmake
libc/config/: app.h
libc/config/riscovite/: app.h  config.json
libc/config/riscovite/riscv/: entrypoints.txt  headers.txt
libc/hdr/: errno_macros.h
libc/include/: errno.h.def
libc/include/llvm-libc-macros/: error-number-macros.h
libc/include/llvm-libc-macros/riscovite/: error-number-macros.h
libc/include/llvm-libc-types/: __mutex_type.h  pthread_once_t.h
libc/src/: CMakeLists.txt
libc/src/__support/File/: dir.cpp  dir.h
libc/src/__support/OSUtil/: io.h  syscall.h
libc/src/__support/OSUtil/riscovite/: CMakeLists.txt  exit.cpp  io.h  syscall.h  sysfunc_types.h  sysfuncs.h
libc/src/__support/OSUtil/riscovite/riscv/: CMakeLists.txt  syscall.h
libc/src/__support/threads/: callonce.h  identifier.h  mutex.h  thread.h
libc/src/pthread/: pthread_mutex_init.cpp
libc/src/stdlib/: CMakeLists.txt
libc/src/stdlib/riscovite/: CMakeLists.txt  abort.cpp  calloc.cpp  dlmalloc.c  dlmalloc.h  free.cpp  malloc.cpp  realloc.cpp
libc/startup/riscovite/: CMakeLists.txt  auxvec.h  do_start.cpp
llvm/lib/TargetParser/: Triple.cpp
llvm/unittests/TargetParser/: TripleTest.cpp
(+16 files in other folders)
